--- a/ASMDuAn1/src/main/java/com/mycompany/asmduan1/QuanLiPhong.form
+++ b/ASMDuAn1/src/main/java/com/mycompany/asmduan1/QuanLiPhong.form
@@ -93,9 +93,9 @@
                               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="txt_DonGia" min="-2" pref="120" max="-2" attributes="0"/>
-                              <Component id="txt_TrangThaiP" alignment="0" min="-2" pref="120" max="-2" attributes="0"/>
+                              <Component id="cbo_LoaiPhong1" min="-2" pref="119" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -105,9 +105,9 @@
                               <Component id="jLabel2" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txt_SoPhong" max="32767" attributes="0"/>
-                              <Component id="cbo_LoaiPhong" pref="119" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="txt_SoPhong" min="-2" pref="119" max="-2" attributes="0"/>
+                              <Component id="cbo_LoaiPhong" min="-2" pref="119" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="47" max="32767" attributes="0"/>
                           <Component id="btn_Them" min="-2" pref="70" max="-2" attributes="0"/>
@@ -131,7 +131,7 @@
                       <Component id="jLabel1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="txt_MaPhong" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txt_TrangThaiP" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cbo_LoaiPhong1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -143,11 +143,11 @@
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel3" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="cbo_LoaiPhong" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btn_Them" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btn_CapNhat" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btn_LamMoi" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btn_Xoa" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cbo_LoaiPhong" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -186,8 +186,6 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txt_SoPhong">
-        </Component>
-        <Component class="javax.swing.JTextField" name="txt_TrangThaiP">
         </Component>
         <Component class="javax.swing.JTextField" name="txt_DonGia">
           <Events>
@@ -274,6 +272,22 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
+        <Component class="javax.swing.JComboBox" name="cbo_LoaiPhong1">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="5">
+                <StringItem index="0" value="Tr&#x1ed1;ng"/>
+                <StringItem index="1" value="&#x110;ang s&#x1eed; d&#x1ee5;ng"/>
+                <StringItem index="2" value="D&#x1ecd;n ph&#xf2;ng"/>
+                <StringItem index="3" value="&#x110;&#x1eb7;t tr&#x1b0;&#x1edb;c"/>
+                <StringItem index="4" value="&#x110;&#xe3; tr&#x1ea3; ph&#xf2;ng"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -340,6 +354,9 @@
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="66" red="66" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="QU&#x1ea2;N L&#xdd; PH&#xd2;NG"/>
       </Properties>
