--- a/ASMDuAn1/src/main/java/com/mycompany/asmduan1/QuanLiPhong.form
+++ b/ASMDuAn1/src/main/java/com/mycompany/asmduan1/QuanLiPhong.form
@@ -304,11 +304,11 @@
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="5">
-                <Column editable="true" title="M&#xe3; ph&#xf2;ng" type="java.lang.Object"/>
-                <Column editable="true" title="S&#x1ed1; ph&#xf2;ng" type="java.lang.Object"/>
-                <Column editable="true" title="Gi&#xe1; ph&#xf2;ng" type="java.lang.Object"/>
-                <Column editable="true" title="Lo&#x1ea1;i ph&#xf2;ng" type="java.lang.Object"/>
-                <Column editable="true" title="Tr&#x1ea1;ng th&#xe1;i Ph&#xf2;ng" type="java.lang.Object"/>
+                <Column editable="false" title="M&#xe3; ph&#xf2;ng" type="java.lang.Object"/>
+                <Column editable="false" title="S&#x1ed1; ph&#xf2;ng" type="java.lang.Object"/>
+                <Column editable="false" title="Gi&#xe1; ph&#xf2;ng" type="java.lang.Object"/>
+                <Column editable="false" title="Lo&#x1ea1;i ph&#xf2;ng" type="java.lang.Object"/>
+                <Column editable="false" title="Tr&#x1ea1;ng th&#xe1;i Ph&#xf2;ng" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
