--- a/ASMDuAn1/src/main/java/com/mycompany/asmduan1/frm_QLKH.form
+++ b/ASMDuAn1/src/main/java/com/mycompany/asmduan1/frm_QLKH.form
@@ -355,7 +355,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="8" rowCount="4">
                 <Column editable="false" title="M&#xe3; Kh&#xe1;ch H&#xe0;ng" type="java.lang.Object"/>
-                <Column editable="false" title="H&#x1ecd; T&#xea;n" type="java.lang.Object"/>
+                <Column editable="false" title="H&#x1ecd; V&#xe0; T&#xea;n" type="java.lang.Object"/>
                 <Column editable="false" title="Gi&#x1edb;i T&#xed;nh" type="java.lang.Object"/>
                 <Column editable="false" title="Ng&#xe0;y Sinh" type="java.lang.Object"/>
                 <Column editable="false" title="CMND/CCCD" type="java.lang.Object"/>
